tests/baselines/reference/spellingSuggestionGlobal1.errors.txt
spellingSuggestionGlobal1.ts(3,1): error TS2304: Cannot find name 'global'.


==== spellingSuggestionGlobal1.ts (1 errors) ====
    export {}
    declare global { const x: any }
    global.x // should not suggest `global` (GH#42209)
    ~~~~~~
!!! error TS2304: Cannot find name 'global'.
    